--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,6 +5,10 @@ WORKDIR /app
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
     vsftpd \
+    db-util \
+    curl \
+    gnupg \
+    lsb-release \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements and install Python dependencies
@@ -14,11 +18,19 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy application code
 COPY . .
 
-# Create FTP directories
-RUN mkdir -p /home/ftpusers /etc/vsftpd
+# Create FTP directories and setup
+RUN mkdir -p /home/ftpusers /etc/vsftpd /var/run/vsftpd/empty
 
-# Expose port
-EXPOSE 8000
+# Setup vsftpd configuration
+COPY setup_vsftpd.py .
+RUN python setup_vsftpd.py
 
-# Start the application
-CMD ["python", "start.py"] 
+# Copy startup script
+COPY start.sh /app/start.sh
+RUN chmod +x /app/start.sh
+
+# Expose ports
+EXPOSE 8000 21
+
+# Start both services
+CMD ["/app/start.sh"] 
