--- a/nginx.conf
+++ b/nginx.conf
@@ -18,7 +18,7 @@ http {
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
-    gzip_proxied expired no-cache no-store private must-revalidate auth;
+    gzip_proxied expired no-cache no-store private auth;
     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss;
 
     server {
@@ -29,7 +29,7 @@ http {
 
         # API proxy
         location /api/ {
-            proxy_pass http://localhost:8000;
+            proxy_pass http://backend:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
